PR-fixes
Fixes fra pr. Extract systemid fra tokenet